[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/tilesheet.png" type="Texture" id=1]
[ext_resource path="res://data/Units/PowerStation/PowerStation.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/Units/Mine/Mine.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/Units/Alchemist/Alchemist.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/Units/Doll/Doll.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/Units/Bugs/SmallBug/SmallBug.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/Units/Bugs/BugNest/BugNest.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/Players/SurvivorPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://data/Players/BugPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://data/Units/Base/Base.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/World.gd" type="Script" id=11]
[ext_resource path="res://src/System/PlayerController.tscn" type="PackedScene" id=12]
[ext_resource path="res://data/Level/BugEvolutionTimer.gd" type="Script" id=13]
[ext_resource path="res://data/Level/BugSpawnTimer.gd" type="Script" id=14]
[ext_resource path="res://src/GameTime.gd" type="Script" id=15]

[sub_resource type="TileSet" id=1]
0/name = "tilesheet.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "tilesheet.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "tilesheet.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "tilesheet.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 11 )

[node name="Terrain" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 1, 0, -131069, 1, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -4, 1, 0, -3, 1, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 1, 0, -65533, 1, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, 65532, 1, 0, 65533, 1, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 1, 0, 3, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 1, 0, 65539, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 2, 0 )

[node name="Building" type="TileMap" parent="."]
format = 1

[node name="PlayerController" parent="." instance=ExtResource( 12 )]
player_index = 1

[node name="SurvivorPlayer" parent="." instance=ExtResource( 8 )]

[node name="BugPlayer" parent="." instance=ExtResource( 9 )]

[node name="PowerStation" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 192 )
player_index = 1

[node name="Mine" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, -192 )
player_index = 1

[node name="Alchemist" parent="." instance=ExtResource( 4 )]
position = Vector2( 477.236, -34.3232 )
player_index = 1

[node name="Doll" parent="." instance=ExtResource( 5 )]
position = Vector2( 432.124, 113.288 )
player_index = 1

[node name="SmallBug" parent="." instance=ExtResource( 6 )]
position = Vector2( 972.888, -14.2512 )
player_index = 2

[node name="BugNest" parent="." instance=ExtResource( 7 )]
position = Vector2( 1115.97, -4.91473 )
player_index = 2

[node name="Base" parent="." instance=ExtResource( 10 )]
player_index = 1
hp = 10000

[node name="BugEvolutionTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true
script = ExtResource( 13 )

[node name="BugSpawnTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="BugSpawnTimer"]

[node name="GameTime" type="Node" parent="."]
script = ExtResource( 15 )
[connection signal="die" from="Alchemist" to="." method="_on_Alchemist_die"]
[connection signal="die" from="Base" to="." method="_on_Base_die"]
[connection signal="timeout" from="BugEvolutionTimer" to="BugEvolutionTimer" method="_on_BugEvolutionTimer_timeout"]
[connection signal="timeout" from="BugSpawnTimer" to="BugSpawnTimer" method="_on_BugSpawnTimer_timeout"]
[connection signal="timeout" from="BugSpawnTimer/Timer" to="BugSpawnTimer" method="_on_Timer_timeout"]
